# KernelHE

./: README.md
ckks/: CMakeLists.txt  README.md
ckks/cipher/distance/: distance.cpp  distance_kernel.cpp
ckks/cipher/norm/: norm.cpp  norm_kernel.cpp
ckks/cipher/pca/: pca.cpp
ckks/cipher/similarity/: similarity.cpp  similarity_kernel.cpp
ckks/cipher/svm/: operation.cpp  operation.h  svm.cpp
ckks/cipher/variance/: variance.cpp  variance_kernel.cpp  variance_kernel_n.cpp  variance_n.cpp
ckks/plain/: CMakeLists.txt
ckks/plain/distance/: CMakeLists.txt  distance.cpp  distance_kernel.cpp
ckks/plain/norm/: CMakeLists.txt  norm.cpp  norm_kernel.cpp
ckks/plain/pca/: CMakeLists.txt  pca.cpp  pca_kernel.cpp
ckks/plain/similarity/: CMakeLists.txt  similarity.cpp  similarity_kernel.cpp
ckks/plain/svm/: CMakeLists.txt  svm.cpp  svm_kernel.cpp
ckks/plain/variance/: CMakeLists.txt  variance.cpp  variance_kernel.cpp
tfhe/: README.md  cleanup.sh  run_test_tfhe_kmeans.sh  run_test_tfhe_knn.sh
tfhe/kmeans/cipher/kernel/: HomKernelKmeans.c  KernelKmeanscluster.txt  KernelKmeansdata.txt  run_test_KernelKmeans.sh  testKernelKmeansStep1.c  testKernelKmeansStep2.c  testKernelKmeansStep3.c
tfhe/kmeans/cipher/original/: HomKmeans_new.c  KmeansCipherResult.txt  KmeansPlainResult.txt  Kmeanscluster.txt  Kmeansdata.txt  run_test_Kmeans_new_C.sh  testKmeans_newStep1.c  testKmeans_newStep2.c  testKmeans_newStep3.c
tfhe/kmeans/plain/kernel/: KernelKmeansPlainTime.txt  KernelKmeanscluster.txt  PlainKernelKmeans.c  run_test_Kmeans_P.sh  testPlainKernelKmeans.c
tfhe/knn/cipher/kernel/: HomKernelKNN.c  (+5 more)
(+24 files in other folders)
